# LORR24

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RunInDocker.sh  apt.txt  compile.sh  graph_guidance  pibt_main  pip.txt  printer  printerold  СMakePresets.json  阅读笔记.md
PlanViz/example/: random-32-32-20.csv
PlanViz/script/: plan_config2.py  plan_viz2.py
Solution/: assert.cpp  assert.hpp  build_metrics.cpp  dsu.cpp  dsu.hpp  randomizer.cpp  randomizer.hpp  settings.cpp  settings.hpp  tester.cpp  todo.hpp  useful.hpp
Solution/Data/: guidance_map_random.txt  guidance_map_warehouse.txt
Solution/Objects/: assert.cpp  assert.hpp  dsu.cpp  dsu.hpp  environment.cpp  environment.hpp  guidance_graph.cpp  guidance_graph.hpp  linear_heap.hpp  map.cpp  map.hpp  position.cpp  position.hpp  randomizer.hpp
Solution/Objects/Basic/: assert.cpp  assert.hpp  position.cpp  position.hpp  randomizer.cpp  time.cpp  time.hpp
Solution/Objects/Containers/: dsu.cpp  dsu.hpp  linear_heap.cpp  linear_heap.hpp  pers_vector.cpp  pers_vector.hpp
Solution/Objects/Environment/: BusynessMap.cpp  BusynessMap.hpp  dhmr.cpp  dhmr.hpp  dynamic_heuristic_matrix.cpp  dynamic_heuristic_matrix.hpp  environment.cpp  environment.hpp  graph.cpp  graph.hpp  graph_guidance.cpp  graph_guidance.hpp  guidance_map.cpp  guidance_map.hpp  guidance_path_planner.cpp  guidance_path_planner.hpp  heuristic_matrix.cpp  heuristic_matrix.hpp  info.cpp  info.hpp  map.cpp  map.hpp  operations.cpp  operations.hpp  operations_map.cpp  operations_map.hpp  raw_heuristic_matrix.cpp  raw_heuristic_matrix.hpp  robot_handler.cpp  robot_handler.hpp  types.cpp  types.hpp  workload_map.cpp  workload_map.hpp
Solution/Objects/GraphGuidanceBuilder/: gg_builder.cpp  graph_guidance_solver.cpp  graph_guidance_solver.hpp
Solution/Objects/GuidanceGraph/: guidance_graph.hpp  guidance_graph_solver.cpp  guidance_graph_solver.hpp  main.cpp
Solution/Objects/GuidanceGraph OUTDATED/: guidance_graph.cpp  guidance_graph_solver.cpp
Solution/Planner/: dist_machine.cpp  dist_machine.hpp  environment.cpp  environment.hpp  epibt.cpp  epibt.hpp  epibt_lns.cpp  epibt_lns.hpp  eplanner.cpp  eplanner.hpp  global_dp.cpp  global_dp.hpp  pepibt_lns.cpp  pibt.cpp  pibt.hpp  pibt_search.cpp  planner.cpp  planner.hpp  planner_machine.cpp  planner_machine.hpp  planner_solver.cpp  planner_solver.hpp  position.cpp  position.hpp  solution_info.cpp  solution_info.hpp
Solution/Planner/Default/: default_planner_solver.cpp  default_planner_solver.hpp
Solution/Planner/LaCAM/: lacam.cpp  lacam.hpp  node.cpp  node.hpp
Solution/Planner/Machine/: planner_machine.cpp  planner_machine.hpp
Solution/Planner/PIBT/: epibt.cpp  epibt.hpp  epibt_lns.cpp  epibt_lns.hpp  pepibt_lns.cpp  pibt.cpp  pibt.hpp  pibt2.cpp  pibt2.hpp  pibt3.cpp  pibt3.hpp  pibt_lns.cpp  pibt_lns.hpp  pibt_search.cpp  pibt_solver.cpp  pibt_solver.hpp  pibt_star.cpp  pibt_star.hpp  pibts.cpp  pibts.hpp  pibts_old.cpp  pibts_old.hpp  pmps.cpp  pmps.hpp
Solution/Planner/PIBT/main/: pibt_main.cpp
Solution/Planner/Solver/: global_dp.cpp  global_dp.hpp  planner_solver.cpp  planner_solver.hpp  solution_info.cpp  solution_info.hpp
Solution/Python/: build_gg_plot.py  build_metrics_plot.py  build_usage_plot.py  build_usage_plot2.py  main.py
Solution/Scheduler/: hungarian.cpp  hungarian.hpp  journey_graph.cpp  journey_graph.hpp  scheduler.cpp  scheduler.hpp  scheduler_solver.cpp  scheduler_solver.hpp
Solution/Tools/: tools.cpp  tools.hpp
Solution2/inc/: MAPFPlanner.h
Solution2/inc/LNS/: LNSSolver.h  common.h
Solution2/inc/LNS/Parallel/: DataStructure.h
Solution2/inc/LaCAM2/: LaCAM2Solver.hpp  executor.hpp  slow_executor.hpp
Solution2/inc/LaCAM2/SUO2/: CostMap.h  SpatialSearch.h
Solution2/inc/RHCR/interface/: RHCRInit.h
Solution2/inc/RHCR/main/: common.h
Solution2/inc/util/: CompetitionActionModel.h  MyCommon.h  TimeLimiter.h  Timer.h
Solution2/inc/util/SearchForHeuristics/: DataStructure.h  SpatialSearch.h
Solution2/spdlog/fmt/: fmt.h
Solution2/spdlog/fmt/bundled/: ostream.h
Solution2/src/: MAPFPlanner.cpp
Solution2/src/LNS/: Instance.cpp  LNSSolver.cpp  PathTable.cpp
Solution2/src/LNS/Parallel/: GlobalManager.cpp  LocalOptimizer.cpp  NeighborGenerator.cpp  TimeSpaceAStarPlanner.cpp
Solution2/src/LaCAM2/: LaCAM2Solver.cpp  planner.cpp
Solution2/src/LaCAM2/SUO2/: SpatialSUO.cpp
Solution2/src/RHCR/interface/: CompetitionGraph.cpp  RHCRSolver.cpp
Solution2/src/RHCR/main/: SIPP.cpp  StateTimeAStar.cpp
Solution2/src/util/: HeuristicTable.cpp  Timer.cpp  analyze.cpp
configs/: Paris_1_256.json  brc202d.json  random-32-32-20.json  sortation_large.json  warehouse_large.json
default_planner/: Memory.h  TrajLNS.h  Types.h  const.h  flow.cpp  flow.h  heap.h  heuristics.cpp  heuristics.h  pibt.cpp  pibt.h  planner.cpp  planner.h  scheduler.cpp  scheduler.h  search.cpp  search.h  search_node.h  utils.cpp  utils.h
example_problems/random.domain/: random_32_32_20_100_2.json  random_32_32_20_200_2.json  random_32_32_20_300_2.json  random_32_32_20_600_2.json
example_problems/warehouse.domain/agents/: warehouse_large_10000.agents
inc/: ActionModel.h  CompetitionSystem.h  Entry.h  Evaluation.h  Grid.h  Logger.h  MAPFPlanner.h  SharedEnv.h  Simulator.h  States.h  TaskManager.h  TaskScheduler.h  Tasks.cpp  Tasks.h  common.h  global.h
python/common/: MAPFbinding.cpp
readme/: Debug_and_Visualise_Your_Planner.md  Prepare_Your_Submission.md  Submission_Instruction.md
src/: ActionModel.cpp  CompetitionSystem.cpp  Entry.cpp  Evaluation.cpp  Grid.cpp  Logger.cpp  MAPFPlanner.cpp  Simulator.cpp  States.cpp  TaskManager.cpp  TaskScheduler.cpp  common.cpp  driver.cpp
src/Evaluation/: main.cpp
